# fdtdx

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  changelog.md  codecov.yml  environment.yaml  index.html  mkdocs.yml  objects.inv  paper.bib  paper.md  pyproject.toml  readthedocs.yaml  search.html  sitemap.xml  tox.ini
.claude/skills/fdtdx/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/jax/: SKILL.md
.claude/skills/jax-pde/: SKILL.md
.github/: dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  publish.yml
advanced/norms/: index.html
api/: index.html
api/config/: index.html
api/constants/: index.html
api/constraints/: index.html
api/constraints/binary/: index.html
api/constraints/discrete/: index.html
api/constraints/mapping/: index.html
api/constraints/modules/: index.html
api/constraints/utils/: index.html
api/core/: index.html
api/core/arrays/: index.html
api/core/config/: index.html
api/core/distributed/: index.html
api/core/jax/: index.html
api/core/pytree/: index.html
api/core/types/: index.html
api/fdtd/: index.html
api/fdtd/core/: index.html
api/fdtd/fields/: index.html
api/fdtd/interfaces/: index.html
api/fdtd/updates/: index.html
api/interfaces/: index.html
api/internal/compression/: index.html
api/internal/detector/: index.html
api/internal/objects/: index.html
api/internal/sources/: index.html
api/internal/transformation/: index.html
api/materials/: index.html
api/objects/: index.html
api/objects/base/: index.html
api/objects/boundaries/: index.html
api/objects/containers/: index.html
api/objects/detectors/: index.html
api/objects/device/: index.html
api/objects/initialization/: index.html
api/objects/materials/: index.html
api/objects/object/: index.html
api/objects/sources/: index.html
api/objects/static_material/: index.html
api/physics/: index.html
api/physics/constants/: index.html
api/physics/metrics/: index.html
api/physics/modes/: index.html
api/public/ArrayContainer/: index.html
api/public/BinaryMedianFilterModule/: index.html
api/public/BoundaryConfig/: index.html
api/typing/: index.html
api/utils/: index.html
checks/: check_gradient.py  check_lossy_material.py  check_reflectance_transmission.py  check_waveguide_modes.py
docs/: .nav.yml  index.md  requirements.txt
docs/advanced/: norms.md
docs/api/: config.md  core.md  fdtd.md  index.md  interfaces.md  materials.md  typing.md  utils.md
docs/api/core/: arrays.md  (+6 more)
docs/notebooks/: simulate_lossy_material.ipynb
docs/scripts/: sync_notebooks.sh
docs/source/: 01_quickstart.rst  02_components.rst  02_physics.rst  03_advanced.rst  03_components.rst  04_advanced.rst  05_contributing.rst  06_faq.rst  07_api.rst  advanced.rst  api.rst  conf.py  contributing.rst  examples.rst  faq.rst  index.rst  nonuniform_grid_refactor.rst  quickstart.rst
docs/stylesheets/: extra.css
docs/tutorials/: constraint_mapping.md  interface_compression.md  jax_introduction.md  materials.md  object_placement.md  parameter_mapping.md
examples/: bloch_band_structure.py  continous_device_example.py  dispersive_gaussian_pulse.py  evaluate_random_scatterer.py  hyperbolic_asymmetric_refraction.py  hyperbolic_dispersive_slab.py  line_detector_single_timestep.py  line_detector_time_series.py  optimize_ceviche_corner.py  optimize_vertical_polymer_coupler.py  optimize_vertical_silicon_coupler.py  optimize_waveguide_stitching.py  simulate_gaussian_source.py  simulate_gaussian_source_anisotropic.py  simulate_gaussian_source_fully_anisotropic.py  speed_benchmark.py  temp.py  validate_sidewall_neff.py  width_sweep_analysis.py
fdtdx/constraints/: binary_transform.py  continuous.py  discrete.py  mapping.py  projection.py  utils.py
fdtdx/core/: config.py  gaussian_blur.py  misc.py
fdtdx/fdtd/: backward.py  curl.py  fdtd.py  forward.py  update.py
fdtdx/interfaces/: modules.py  recorder.py  state.py  time_filter.py
fdtdx/objects/: container.py  initialization.py  material.py  object.py  wavelength.py
fdtdx/shared/: logger.py  misc.py  plot_setup.py
javascripts/: mathjax.js
notebooks/modes/: index.html
notebooks/simulate_lossy_material/: index.html
overrides/: main.html
paper/: paper.bib  paper.json  paper.md
performance/: directional_coupler.py
scripts/: evaluate_random_scatterer.py  optimize_vertical_polymer_coupler.py  optimize_vertical_silicon_coupler.py  simulate_gaussian_source.py
search/: search_index.json
src/fdtdx/: __init__.py  colors.py  config.py  constants.py  dispersion.py  materials.py  typing.py
tests/: conftest.py  test_anisotropic_materials.py  test_config.py  test_constants.py  test_non_isotropic_materials.py  test_placement.py  test_sanity.py  test_symmetries.py
tests/conversion/: setup_test.json  test_export.py  test_json.py  test_vti.py
tests/core/: test_core_misc.py  test_fraction.py  test_grid.py  test_linalg.py  test_pytreeclass.py  test_wave_character.py
tests/data/: example_device_params.npy  simple_waveguide.gds
tests/docs/: conftest.py  test_api_rst.py
tests/fdtd/: test_backward.py  test_condition.py  test_container.py  test_fdtd.py  test_forward.py  test_initialization.py  test_misc.py  test_update.py  test_wrapper.py
tests/functional/: test_functional_linalg.py  test_numpy.py
tests/integration/: conftest.py
tests/performance/: conftest.py  utils.py
tests/simulation/: conftest.py
tests/unit/: conftest.py  test_colors.py  test_config.py  test_constants.py  test_dispersion.py  test_dispersive_source_correction.py  test_materials.py
tests/units/: test_sign.py  test_typing.py  test_unitful.py
tests/utils/: test_plot_field_slice.py  test_plot_material.py  test_plot_setup.py
tutorials/constraint_mapping/: index.html
tutorials/interface_compression/: index.html
tutorials/jax_introduction/: index.html
tutorials/materials/: index.html
tutorials/object_placement/: index.html
tutorials/parameter_mapping/: index.html
(+541 files in other folders)
