[project]
name = "fdtdx"
version = "0.4.2"
description = "A JAX framework for the finite-difference time-domain (FDTD) method for solving Maxwell's equations with a focus on inverse design of photonic devices." 
readme = "README.md"
authors = [
    { name = "Yannik Mahlau", email = "mahlau@tnt.uni-hannover.de" },
    { name = "Frederik Schubert", email = "schubert@tnt.uni-hannover.de" },
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pytreeclass>=0.11",
    "jax>=0.4.36; platform_system != 'Linux'",
    "jax[cuda12]>=0.4.36; platform_system == 'Linux'",
    "moviepy>=2.1.1",
    "optax>=0.2.4",
    "equinox>=0.11.10",
    "trimesh>=4.5.3",
    "tidy3d>=2.8.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.4",
    "rich>=13.9.4",
]

[project.urls]
Repository = "https://github.com/ymahlau/fdtdx"
Documentation = "https://ymahlau.github.io/fdtdx/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
exclude = ["examples", "slurm", "checks"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.48",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-jupyter",
    "mkdocs-awesome-nav",
    "pre-commit>=4.0.1",
    "pymdown-extensions>=10.12",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.2",
    "tox-uv>=1.16.1",
    "pydoclint>=0.6.6",
]

[tool.pyright]
include = ["src", "examples", "checks", "test"]
exclude = ["**/.venv"]