[project]
name = "fdtdx"
version = "0.4.3"
description = "A JAX framework for the finite-difference time-domain (FDTD) method for solving Maxwell's equations with a focus on inverse design of photonic devices." 
readme = "README.md"
authors = [
    { name = "Yannik Mahlau", email = "mahlau@tnt.uni-hannover.de" },
    { name = "Frederik Schubert", email = "schubert@tnt.uni-hannover.de" },
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pytreeclass>=0.11",
    "jax>=0.7.0",
    "moviepy>=2.1.1",
    "optax>=0.2.4",
    "equinox>=0.11.10",
    "trimesh>=4.5.3",
    "tidy3d>=2.8.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.4",
    "rich>=13.9.4",
    "plum-dispatch>=2.5.7",
    "fastcore>=1.8.7",
    "typing-extensions>=4.14.1",
]

[project.urls]
Repository = "https://github.com/ymahlau/fdtdx"
Documentation = "https://fdtdx.readthedocs.io/en/latest/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.sources]
external_types = "typings"

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
exclude = ["examples", "slurm", "checks", "docs"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pymdown-extensions>=10.12",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.2",
    "tox-uv>=1.16.1",
    "pydoclint>=0.6.6",
    "sphinx>=8.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-book-theme>=1.1.4",
    "nbsphinx>=0.9",
    "sphinx-autodoc-typehints>=3.2.0",
    "myst_nb>=1.3.0",
]
cuda12 = [
    "jax[cuda12]>=0.7.0",
]
rocm = [
    "jax==0.7.1",
    "jax-rocm7-plugin==0.7.1",
    "jax-rocm7-pjrt==0.7.1",
    # pip install https://github.com/ROCm/jax/releases/download/rocm-jax-v0.7.1/jaxlib-0.7.1-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl
]

[tool.pyright]
include = ["src", "examples", "checks", "test"]
exclude = ["**/.venv"]