[project]
name = "fdtdx"
version = "0.6.2"
description = "A JAX framework for the finite-difference time-domain (FDTD) method for solving Maxwell's equations with a focus on inverse design of photonic devices." 
readme = "README.md"
authors = [
    { name = "Yannik Mahlau", email = "mahlau@tnt.uni-hannover.de" },
    { name = "Frederik Schubert", email = "schubert@tnt.uni-hannover.de" },
]
requires-python = ">=3.11, <3.15"
dependencies = [
    "loguru>=0.7.3",
    "pytreeclass>=0.11",
    "jax>=0.4.36",
    "moviepy@git+https://github.com/Zulko/moviepy@7ffa4f00376237137a25fe1c777355c37753e9af",
    "optax>=0.2.4",
    "equinox>=0.11.10",
    "trimesh>=4.5.3",
    "tidy3d>=2.8.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.4",
    "rich>=13.9.4",
    "typing-extensions>=4.14.1",
    "gdstk>=0.9",
]

[project.urls]
Repository = "https://github.com/ymahlau/fdtdx"
Documentation = "https://fdtdx.readthedocs.io/en/latest/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
exclude = ["examples", "slurm", "checks", "docs"]

[tool.ruff.lint]
extend-select = ["I", "RUF"]
ignore = []
allowed-confusables = ["α", "β", "γ", "δ", "ε", "ζ", "η", "θ", "ι", "κ", "λ", "μ", "ν", "ξ", "π", "ρ", "σ", "τ", "υ", "φ", "χ", "ψ", "ω", "Α", "Β", "Γ", "Δ", "Ε", "Ζ", "Η", "Θ", "Ι", "Κ", "Λ", "Μ", "Ν", "Ξ", "Π", "Ρ", "Σ", "Τ", "Υ", "Φ", "Χ", "Ψ", "Ω"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "docs: marks tests as docs tests (deselect with '-m \"not docs\"')",
    "simulation: marks tests as simulation tests",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pymdown-extensions>=10.12",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.2",
    "tox-uv>=1.16.1",
    "pydoclint>=0.6.6",
    "sphinx<9.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-book-theme>=1.1.4",
    "nbsphinx>=0.9",
    "sphinx-autodoc-typehints>=3.2.0",
    "myst_nb>=1.3.0",
    "sphinx-copybutton>=0.5.2",
    "chex>=0.1.91",
    "sphinx-design",
    "ty>=0.0.49",
]

[tool.pyright]
include = ["src", "examples", "checks", "test"]
exclude = ["**/.venv"]

[tool.ty.src]
exclude = ["tests"]

[tool.ty.environment]
python-version = "3.14"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "tensorboard>=2.21.0",
]
